--- a/hackathon 1/style.css
+++ b/hackathon 1/style.css
@@ -3,7 +3,7 @@ body {
   font-family: "Lato", sans-serif;
   background-image: url("https://i.pinimg.com/originals/6d/c0/81/6dc08153a6141157758f397b755f9185.jpg");
   opacity:0.8;
-  background-size:contain;
+  background-size:cover;
 }
 
 
@@ -49,8 +49,6 @@ body {
     border: 3px solid red;
     border-radius:10px;
 }
-.accordion-button{
 
-}
 
 
